menu mobile link to starter anchor, ration headers fixed on mobile

--- a/client/src/styles/_grids.scss
+++ b/client/src/styles/_grids.scss
@@ -38,10 +38,7 @@
   div {
     padding-top: 0.75rem;
     grid-column: #{$grid-second-half};
-
-    h3 {
-      line-height: 2;
-    }
+    width: 100%;
   }
 
   @media screen and (max-width: map-get($breakpoints, "lg")) {
